# ImitationMASH

./: .gitmodules  CMakeLists.txt  Client.cpp  dummy.cpp  predictionClient.cpp  readme  readme.md  runCNNserver.sh  runClientServer.sh  runClientServer.sh~  runServer.sh  script.sh
learning/: ImitationCNN.py  ImitationCNN.py~  convServer.py
